skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_tabs__tab_decisions_all_entries.snap
---
source: tests/snapshot_tabs.rs
expression: rendered
---
"┌ Flightdeck ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session VS  ·  Master pi  ·  file  ·  uptime 0m  ·  Adhoc 0 · Issue 3 · Workflow 0  ·  fresh  $0.00/0T                                                        moon ▾ │"
"└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Activity │ Conversations │ Merges │ Decisions │ Costs │ Daemon                                                                                                         │"
"└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Decisions ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Time      Session            Prompt tag                   Answer                                                                                                                   │"
"│19:50:12  HT-9001            scope-creep-detected         PAUSED FOR USER                                                                                                          │"
"│19:42:08  HT-9002            merge-ready-but-unknown      wait; unknown_since=120s < threshold                                                                                     │"
"│18:30:55  HT-9002            bot-review-wait              skip; reviewDecision=APPROVED                                                                                            │"
"│17:58:30  HT-9000            cleanup-prompt               yes; worktree path matches registered entry                                                                              │"
"│17:45:01  HT-9001            rebase-multi-choice          rebase against main                                                                                                      │"
"│16:20:11  HT-9000            merge-now                    yes                                                                                                                      │"
"│16:12:33  HT-9001            audit-relation-prompt        child of HT-9000                                                                                                         │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"│                                                                                                                                                                                   │"
"└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   f filters   n noise   s session   d decisions   e export   ? help   q quit                                     noise: hidden  ·  filter: off"
"                                                                                                                                                                                     "
